<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/tv_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:padding="@dimen/dimen_10dp"
        android:text="@string/project_share_red_packet"
        android:textColor="@color/colorRed"
        android:textSize="@dimen/font_16sp" />

    <TextView
        android:id="@+id/tv_rule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/tv_share"
        android:padding="@dimen/dimen_10dp"
        android:text="@string/project_share_rule"
        android:textColor="@color/colorBlue"
        android:textSize="@dimen/font_14sp" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tv_share"
        android:layout_centerVertical="true"
        android:layout_marginBottom="@dimen/dimen_10dp"
        android:gravity="center"
        android:text="@string/project_share_rule_tips"
        android:textColor="@color/colorGrey"
        android:textSize="@dimen/font_14sp" />


</RelativeLayout>